// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`history entry renders correctly 1`] = `
<div
  className="
      list__column history-entry
      history-entry--undo
      is-associated
      
      
      
      
      
    "
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  <span
    className="history-entry__description"
  >
    test
  </span>
  <Blueprint3.Tooltip
    content="Undo this action"
    hoverCloseDelay={0}
    hoverOpenDelay={750}
    position="bottom"
    transitionDuration={100}
  >
    <Blueprint3.Icon
      className="history-entry__icon"
      icon="undo"
    />
  </Blueprint3.Tooltip>
</div>
`;

exports[`history entry renders correctly 2`] = `
<div
  className="
      list__column history-entry
      history-entry--redo
      
      is-affected
      
      is-orphaned
      
      is-event-reset
    "
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  <span
    className="history-entry__description"
  >
    test
  </span>
  <Blueprint3.Tooltip
    content="This action created a conflict"
    hoverCloseDelay={0}
    hoverOpenDelay={750}
    position="bottom"
    transitionDuration={100}
  >
    <Blueprint3.Icon
      className="history-entry__icon"
      icon="issue"
      intent="danger"
    />
  </Blueprint3.Tooltip>
  <Blueprint3.Tooltip
    content="Restore event history"
    hoverCloseDelay={0}
    hoverOpenDelay={750}
    position="bottom"
    transitionDuration={100}
  >
    <Blueprint3.Icon
      className="history-entry__icon"
      icon="redo"
    />
  </Blueprint3.Tooltip>
</div>
`;
